[project]
name = "encryption-script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.6",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "python-semantic-release>=10.3.1",
    "ruff>=0.12.10",
    "ty>=0.0.1a19",
]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.remote]
name = "origin"
type = "gitlab"
token = { env = "GITLAB_TOKEN" }
